Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
   }
 }
 
-.category-card-wrapper-ov5z {
+.category-card-wrapper-7mct {
   display: contents;
 }
  
@@ -117,7 +117,7 @@
   }
 }
 
-.category-card-wrapper-5aq7 {
+.category-card-wrapper-ufrx {
   display: contents;
 }
  
@@ -164,7 +164,7 @@
   }
 }
 
-.category-card-wrapper-c60j {
+.category-card-wrapper-ioo3 {
   display: contents;
 }
  
@@ -211,7 +211,7 @@
   }
 }
 
-.category-card-wrapper-vdnq {
+.category-card-wrapper-1tp2 {
   display: contents;
 }
  
@@ -258,7 +258,7 @@
   }
 }
 
-.category-card-wrapper-mqsp {
+.category-card-wrapper-3fm3 {
   display: contents;
 }
  
@@ -305,7 +305,7 @@
   }
 }
 
-.category-card-wrapper-7w68 {
+.category-card-wrapper-uuou {
   display: contents;
 }
  
@@ -352,7 +352,7 @@
   }
 }
 
-.section-heading-wrapper-865o {
+.section-heading-wrapper-8uac {
   display: contents;
 }
  
@@ -512,7 +512,7 @@
   }
 }
 
-.item-card-wrapper-c7ll {
+.item-card-wrapper-xhyi {
   display: contents;
 }
  
@@ -647,7 +647,7 @@
   }
 }
 
-.item-card-wrapper-nekl {
+.item-card-wrapper-yr37 {
   display: contents;
 }
  
@@ -782,7 +782,7 @@
   }
 }
 
-.item-card-wrapper-v6lg {
+.item-card-wrapper-ejft {
   display: contents;
 }
  
@@ -917,7 +917,7 @@
   }
 }
 
-.item-card-wrapper-gzy4 {
+.item-card-wrapper-jahw {
   display: contents;
 }
  
@@ -1052,7 +1052,7 @@
   }
 }
 
-.section-heading-wrapper-ea1i {
+.section-heading-wrapper-bk1o {
   display: contents;
 }
  
@@ -1145,7 +1145,7 @@
   }
 }
 
-.blog-post-card-wrapper-u56j {
+.blog-post-card-wrapper-xp3u {
   display: contents;
 }
  
@@ -1213,7 +1213,7 @@
   }
 }
 
-.blog-post-card-wrapper-hhcv {
+.blog-post-card-wrapper-sis8 {
   display: contents;
 }
  
