Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
   }
 }
 
-.category-card-wrapper-7mct {
+.category-card-wrapper-bvng {
   display: contents;
 }
  
@@ -117,7 +117,7 @@
   }
 }
 
-.category-card-wrapper-ufrx {
+.category-card-wrapper-3u9i {
   display: contents;
 }
  
@@ -164,7 +164,7 @@
   }
 }
 
-.category-card-wrapper-ioo3 {
+.category-card-wrapper-tv04 {
   display: contents;
 }
  
@@ -211,7 +211,7 @@
   }
 }
 
-.category-card-wrapper-1tp2 {
+.category-card-wrapper-j7p2 {
   display: contents;
 }
  
@@ -258,7 +258,7 @@
   }
 }
 
-.category-card-wrapper-3fm3 {
+.category-card-wrapper-bacj {
   display: contents;
 }
  
@@ -305,7 +305,7 @@
   }
 }
 
-.category-card-wrapper-uuou {
+.category-card-wrapper-d4sz {
   display: contents;
 }
  
@@ -352,7 +352,7 @@
   }
 }
 
-.section-heading-wrapper-8uac {
+.section-heading-wrapper-huki {
   display: contents;
 }
  
@@ -512,7 +512,7 @@
   }
 }
 
-.item-card-wrapper-xhyi {
+.item-card-wrapper-6e2k {
   display: contents;
 }
  
@@ -647,7 +647,7 @@
   }
 }
 
-.item-card-wrapper-yr37 {
+.item-card-wrapper-ftok {
   display: contents;
 }
  
@@ -782,7 +782,7 @@
   }
 }
 
-.item-card-wrapper-ejft {
+.item-card-wrapper-j9x7 {
   display: contents;
 }
  
@@ -917,7 +917,7 @@
   }
 }
 
-.item-card-wrapper-jahw {
+.item-card-wrapper-qy2l {
   display: contents;
 }
  
@@ -1052,7 +1052,7 @@
   }
 }
 
-.section-heading-wrapper-bk1o {
+.section-heading-wrapper-7gz5 {
   display: contents;
 }
  
@@ -1145,7 +1145,7 @@
   }
 }
 
-.blog-post-card-wrapper-xp3u {
+.blog-post-card-wrapper-8ijc {
   display: contents;
 }
  
@@ -1213,7 +1213,7 @@
   }
 }
 
-.blog-post-card-wrapper-sis8 {
+.blog-post-card-wrapper-x8jf {
   display: contents;
 }
  
