--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
   }
 }
 
-.category-card-wrapper-bvng {
+.category-card-wrapper-iuzb {
   display: contents;
 }
  
@@ -117,7 +117,7 @@
   }
 }
 
-.category-card-wrapper-3u9i {
+.category-card-wrapper-fply {
   display: contents;
 }
  
@@ -164,7 +164,7 @@
   }
 }
 
-.category-card-wrapper-tv04 {
+.category-card-wrapper-btee {
   display: contents;
 }
  
@@ -211,7 +211,7 @@
   }
 }
 
-.category-card-wrapper-j7p2 {
+.category-card-wrapper-0wbm {
   display: contents;
 }
  
@@ -258,7 +258,7 @@
   }
 }
 
-.category-card-wrapper-bacj {
+.category-card-wrapper-mr31 {
   display: contents;
 }
  
@@ -305,7 +305,7 @@
   }
 }
 
-.category-card-wrapper-d4sz {
+.category-card-wrapper-zbf6 {
   display: contents;
 }
  
@@ -352,7 +352,7 @@
   }
 }
 
-.section-heading-wrapper-huki {
+.section-heading-wrapper-f1rf {
   display: contents;
 }
  
@@ -512,7 +512,7 @@
   }
 }
 
-.item-card-wrapper-6e2k {
+.item-card-wrapper-ritg {
   display: contents;
 }
  
@@ -647,7 +647,7 @@
   }
 }
 
-.item-card-wrapper-ftok {
+.item-card-wrapper-lc0g {
   display: contents;
 }
  
@@ -782,7 +782,7 @@
   }
 }
 
-.item-card-wrapper-j9x7 {
+.item-card-wrapper-2gjw {
   display: contents;
 }
  
@@ -917,7 +917,7 @@
   }
 }
 
-.item-card-wrapper-qy2l {
+.item-card-wrapper-gk60 {
   display: contents;
 }
  
@@ -1052,7 +1052,7 @@
   }
 }
 
-.section-heading-wrapper-7gz5 {
+.section-heading-wrapper-omg2 {
   display: contents;
 }
  
@@ -1145,7 +1145,7 @@
   }
 }
 
-.blog-post-card-wrapper-8ijc {
+.blog-post-card-wrapper-d719 {
   display: contents;
 }
  
@@ -1213,7 +1213,7 @@
   }
 }
 
-.blog-post-card-wrapper-x8jf {
+.blog-post-card-wrapper-goe8 {
   display: contents;
 }
  
@@ -1361,6 +1361,15 @@
   grid-gap: 45px;
   position: relative;
   align-items: flex-start;
+}
+ 
+.home-text11 {
+  animation-name: none;
+  animation-delay: 0s;
+  animation-duration: 300ms;
+  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
 }
  
 .home-right1 {
